--- a/e2etest/E2ETestFramework/E2ETestFramework.csproj
+++ b/e2etest/E2ETestFramework/E2ETestFramework.csproj
@@ -4,6 +4,7 @@
     <!-- Workaround until Xamarin supports PPDB -->
     <DebugType>full</DebugType>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Loqu8|net45|AnyCPU'" />
   <ItemGroup Condition=" '$(Configuration)' == 'SdkRel' ">
     <PackageReference Include="Microsoft.Azure.Mobile.Client" Version="4.0.0-alpha-001" />
   </ItemGroup>
