--- a/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
+++ b/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
@@ -21,6 +21,7 @@
     <DebugType>full</DebugType>
     <RootNamespace>Microsoft.WindowsAzure.MobileServices.SQLiteStore</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Loqu8|net45|AnyCPU'" />
   <ItemGroup>
     <ProjectReference Include="..\Microsoft.Azure.Mobile.Client\Microsoft.Azure.Mobile.Client.csproj" />
     <PackageReference Include="SQLitePCLRaw.bundle_green" Version="1.1.2" />
