--- a/unittest/Microsoft.WindowsAzure.MobileServices.Android.Test/Microsoft.WindowsAzure.Mobile.Android.Test.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.Android.Test/Microsoft.WindowsAzure.Mobile.Android.Test.csproj
@@ -50,6 +50,16 @@
     <WarningLevel>4</WarningLevel>
     <AndroidUseSharedRuntime>False</AndroidUseSharedRuntime>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Loqu8|AnyCPU'">
+    <OutputPath>bin\Loqu8\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
     <Reference Include="mscorlib" />
