--- a/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test.Unit/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.Unit.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test.Unit/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.Unit.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>net461</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>
+  </PropertyGroup>  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Loqu8|AnyCPU'" />
   <ItemGroup>
     <Reference Include="System.Net.Http" />
   </ItemGroup>
