--- a/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.csproj
@@ -4,7 +4,8 @@
     <TargetFramework>netstandard1.4</TargetFramework>
     <!-- Workaround until Xamarin supports PPDB -->
     <DebugType>full</DebugType>
-  </PropertyGroup>
+  </PropertyGroup>  
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Loqu8|AnyCPU'" />
   <ItemGroup>
     <ProjectReference Include="..\..\src\Microsoft.Azure.Mobile.Client.SQLiteStore\Microsoft.Azure.Mobile.Client.SQLiteStore.csproj" />
     <ProjectReference Include="..\Microsoft.WindowsAzure.MobileServices.TestFramework\Microsoft.WindowsAzure.Mobile.TestFramework.csproj" />
