--- a/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.iOS.Test/Microsoft.WindowsAzure.Mobile.SQLiteStore.iOS.Test.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.iOS.Test/Microsoft.WindowsAzure.Mobile.SQLiteStore.iOS.Test.csproj
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />  
+  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
@@ -83,6 +83,24 @@
     <ConsolePause>false</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
     <DefineConstants>XAMARIN</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Loqu8|iPhoneSimulator'">
+    <OutputPath>bin\iPhoneSimulator\Loqu8\</OutputPath>
+    <DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;XAMARIN</DefineConstants>
+    <Optimize>true</Optimize>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Loqu8|iPhone'">
+    <OutputPath>bin\iPhone\Loqu8\</OutputPath>
+    <DefineConstants>__UNIFIED__;__MOBILE__;__IOS__;XAMARIN</DefineConstants>
+    <Optimize>true</Optimize>
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <UseVSHostingProcess>false</UseVSHostingProcess>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <None Include="app.config">
