--- a/src/Loqu8.Azure.Mobile.Client.SQLiteStore/Loqu8.Azure.Mobile.Client.SQLiteStore.csproj
+++ b/src/Loqu8.Azure.Mobile.Client.SQLiteStore/Loqu8.Azure.Mobile.Client.SQLiteStore.csproj
@@ -3,6 +3,14 @@
   <PropertyGroup>
     <TargetFramework>netstandard1.4</TargetFramework>
     <RootNamespace>Loqu8.Azure.Mobile.Client.SQLiteStore</RootNamespace>
+    <Version>4.0.0-alpha-002</Version>
+    <Description>This library provides features for creating offline sync-enabled Windows and Xamarin mobile apps that connect to Azure Mobile Apps. It provides an implementation of a local store based on SQLite. To learn more about Azure Mobile, go to http://azure.microsoft.com/mobile.</Description>
+    <PackageLicenseUrl>http://go.microsoft.com/fwlink/?LinkId=286110</PackageLicenseUrl>
+    <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps-net-client</PackageProjectUrl>
+    <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</PackageIconUrl>
+    <RepositoryUrl>https://github.com/Azure/azure-mobile-apps-net-client</RepositoryUrl>
+    <PackageTags>microsoft;windows;azure;mobile;apps;services;windowsazureofficial</PackageTags>
+    <PackageReleaseNotes>https://github.com/Azure/azure-mobile-apps-net-client/blob/master/CHANGELOG.md</PackageReleaseNotes>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Loqu8|AnyCPU'" />
