--- a/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
+++ b/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
@@ -1,12 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard1.3;</TargetFrameworks>
     <Version>4.0.1</Version>
     <PackageTitle>Azure Mobile SQLiteStore</PackageTitle>
     <Title>Azure Mobile SQLiteStore</Title>
     <Authors>Microsoft, azure-sdk</Authors>
-    <Product>Loqu8.Azure.Mobile.Client.SQLiteStore (netstandard1.4)</Product>
+    <Product>Loqu8.Azure.Mobile.Client.SQLiteStore (netstandard1.3)</Product>
     <PackageLicenseUrl>http://go.microsoft.com/fwlink/?LinkId=286110</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/Azure/azure-mobile-apps-net-client</PackageProjectUrl>
     <PackageIconUrl>http://go.microsoft.com/fwlink/?LinkID=288890</PackageIconUrl>
