--- a/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test.Unit/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.Unit.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.SQLiteStore.Test.Unit/Microsoft.WindowsAzure.Mobile.SQLiteStore.Test.Unit.csproj
@@ -1,10 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />  
+  <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <GenerateBindingRedirectsOutputType>true</GenerateBindingRedirectsOutputType>
-  </PropertyGroup>  
+	<PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">portable-net45+win81</PackageTargetFallback>
+
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Loqu8|AnyCPU'" />
   <ItemGroup>
     <Reference Include="System.Net.Http" />
