--- a/unittest/Microsoft.WindowsAzure.MobileServices.Test/Microsoft.WindowsAzure.Mobile.Test.csproj
+++ b/unittest/Microsoft.WindowsAzure.MobileServices.Test/Microsoft.WindowsAzure.Mobile.Test.csproj
@@ -1,19 +1,21 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
    <Import Project="..\..\build\Microsoft.Azure.Mobile.Client.Build.props" />
    <PropertyGroup>
-    <TargetFrameworks>netstandard1.4;netstandard1.1;net45;MonoAndroid44;Xamarin.iOS10;uap10.0</TargetFrameworks>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
      <!-- Workaround until Xamarin supports PPDB -->
      <DebugType>full</DebugType>
+	 <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">portable-net45+win81</PackageTargetFallback>
+
    </PropertyGroup>
-   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Loqu8|net45|AnyCPU'" />
+   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Loqu8|netstandard1.3|AnyCPU'" />
    <ItemGroup>
      <PackageReference Include="MSBuild.Sdk.Extras" Version="1.0.0" PrivateAssets="All" />
      <ProjectReference Include="..\..\src\Microsoft.Azure.Mobile.Client\Microsoft.Azure.Mobile.Client.csproj" />
      <ProjectReference Include="..\Microsoft.WindowsAzure.MobileServices.TestFramework\Microsoft.WindowsAzure.Mobile.TestFramework.csproj" />
    </ItemGroup>
-   <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
+  <!-- <ItemGroup Condition=" '$(TargetFramework)' == 'net45' ">
      <Reference Include="System.Net.Http" />
-   </ItemGroup>
+ </ItemGroup>-->
    <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
