add fallback to SQLiteStore

--- a/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
+++ b/src/Microsoft.Azure.Mobile.Client.SQLiteStore/Microsoft.Azure.Mobile.Client.SQLiteStore.csproj
@@ -21,6 +21,7 @@
     <DebugType>full</DebugType>
     <RootNamespace>Microsoft.WindowsAzure.MobileServices.SQLiteStore</RootNamespace>
     <PackageId>Loqu8.Azure.Mobile.Client.SQLiteStore</PackageId>
+    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netstandard1.3' ">portable-net45+win81</PackageTargetFallback>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Loqu8|net45|AnyCPU'" />
   <ItemGroup>
